# network-manager-iodine

./: .gitignore  .gitlab-ci.yml  Makefile.am  NEWS  autogen.sh  configure.ac  network-manager-iodine.doap  nm-iodine-service.conf  nm-iodine-service.name.in
appdata/: network-manager-iodine.appdata.xml.in
auth-dialog/: Makefile.am  main.c  vpn-password-dialog.c
po/: LINGUAS  POTFILES.in  be.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fr.po  fur.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  kw.po  lt.po  lv.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po
properties/: Makefile.am  nm-iodine-dialog.ui  nm-iodine.c  nm-iodine.h
src/: Makefile.am  nm-iodine-service-defines.h  nm-iodine-service.c  nm-iodine-service.h
